--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "^7.7.0",
-    "@react-native-community/slider": "^4.4.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.49.1",
@@ -22,44 +23,44 @@
     "base64-js": "^1.5.1",
     "date-fns": "^3.3.1",
     "debounce": "^2.0.0",
-    "expo": "52.0.33",
-    "expo-blur": "^14.0.3",
-    "expo-camera": "~14.0.5",
-    "expo-constants": "^17.0.5",
+    "expo": "^53.0.0",
+    "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-constants": "~17.1.6",
     "expo-font": "^13.0.3",
-    "expo-haptics": "^14.0.1",
-    "expo-image": "~1.10.5",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "^7.0.5",
-    "expo-router": "4.0.17",
-    "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "^0.29.21",
-    "expo-status-bar": "^2.0.1",
-    "expo-symbols": "^0.2.2",
-    "expo-system-ui": "^4.0.7",
-    "expo-web-browser": "^14.0.2",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.475.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.23.0",
-    "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "stripe": "^17.7.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   }
 }
