--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-constants"
     ],
     "experiments": {
       "typedRoutes": true,
