--- a/app.json
+++ b/app.json
@@ -20,8 +20,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "expo-constants"
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true,
