--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 npx expo start",
-    "start": "expo start",
-    "build:web": "npx expo export --platform web",
-    "lint": "npx expo lint",
-    "ios": "npx expo run:ios"
+    "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "build:web": "expo export --platform web",
+    "lint": "expo lint",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
@@ -42,10 +41,10 @@
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "lodash": "^4.17.21",
-    "lucide-react-native": "^0.294.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "lucide-react-native": "^0.475.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
@@ -60,7 +59,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
-    "@types/react": "~18.2.0",
+    "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.8.3"
   }
